--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,7 @@
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script src="picturefill.js"></script>
   <title>Landing Page</title>
 </head>
 <body>
